--- a/package.json
+++ b/package.json
@@ -20,11 +20,18 @@
   },
   "homepage": "https://github.com/stackyism/stakhi#readme",
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.2",
+    "@types/styletron-standard": "^2.0.0",
+    "baseui": "^9.65.3",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7",
     "swr": "^0.1.18"
   }
 }
