chore: removes material-ui dependency, resets app

--- a/package.json
+++ b/package.json
@@ -20,25 +20,24 @@
   },
   "homepage": "https://github.com/stackyism/stakhi#readme",
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.47",
-    "@types/react": "^16.9.27",
     "@types/styletron-engine-atomic": "^1.1.0",
     "@types/styletron-react": "^5.0.2",
     "@types/styletron-standard": "^2.0.0",
-    "baseui": "^9.65.3",
+    "autoprefixer": "^9.7.5",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.2",
+    "postcss-import": "^12.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
-    "swr": "^0.1.18"
+    "swr": "^0.1.18",
+    "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^13.9.5",
+    "@types/react": "^16.9.32",
     "typescript": "^3.8.3"
   }
 }
