--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
     "jsx": "preserve"
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".next",
+    ".now"
   ],
   "include": [
     "next-env.d.ts",
