--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss-import": "^12.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-markdown": "^4.3.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
